# restic-generator

./: Cargo.toml  example-config.toml
scripts/: install  test-run
src/: config.rs  main.rs  sys.rs
tests/: output.rs
tests/snapshots/: output__local_backup_service.snap  output__local_forget_service.snap  output__local_prune_service.snap  output__remote_backup_service.snap  output__s3_backup_service.snap
