[package]
name = "restic-generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
home = "0.5"
libc = "0.2.97"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
assert_cmd = "1.0"
insta = "1.7"
tempfile = "3.2"
